Some tweaks for modularity
Signed-off-by: cpw <cpw+github@weeksfamily.ca>